Faltan mejoras a la tabla de crear presupuesto

--- a/src/views/presupuesto/edit-presupuesto.hbs
+++ b/src/views/presupuesto/edit-presupuesto.hbs
@@ -127,8 +127,8 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="col-12 justify-content-end mx-auto p-2">
-                        <div class=" d-flex flex-column my-5 gap-2">
+                    <div class="row justify-content-end mx-auto p-2">
+                        <div class="col-6 d-flex flex-column my-5 gap-2">
                             <div class="text-end">
                                 <label class="form-label fs-5 fw-bold" for="totalPrice">SubTotal: </label>
                                 <input class="form-control-sm fs-5 fw-bold" type="text" name="totalPrice"
