--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -79,18 +79,36 @@ h6 {
 }
 
 .btn-custom {
-    height: 1.8rem; /* h-10 */
-    width: 3.9rem; /* w-10 */
-    display: flex; /* flex */
-    align-items: center; /* items-center */
-    justify-content: center; /* justify-center */
-    font-weight: bold; /* font-bold */
-    background-color: #32c47d; /* bg-lime-500 */
-    color: #fff; /* text-white */
-    font-size: 1.5rem; /* text-2xl */
-    border: none; /* hover:outline-none (remove the default outline on hover) */
+    height: 1.8rem;
+    width: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    background-color: #32c47d;
+    color: #fff;
+    font-size: 2rem;
+    border: none;
+    margin: 0 auto;
+    padding: 1rem;
 }
 
 .btn-custom:hover {
-    box-shadow: 0 0 0 3px rgba(50, 196, 125, 0.5); /* hover:ring-2 hover:ring-offset-2 hover:ring-lime-500 */
+    box-shadow: 0 0 0 3px rgba(50, 196, 125, 0.5);
+}
+.btnRemoveRow {
+    height: 1.8rem;
+    width: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    background-color: red;
+    color: #fff;
+    border: none;
+    margin: 0 auto;
+    padding: 1rem;
+}
+.btnRemoveRow:hover {
+    box-shadow: 0 0 0 3px red;
 }
